# strix-halo-int4-gemms

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
benchmarks/: gemm_tuning_int4_pc_sweep.json  gemm_tuning_int4_sc256_deep_sweep.json  gemm_tuning_int4_sc256_fine_sweep.json  gemm_tuning_int4_sc256_scale_once_probe.json  gemm_tuning_int8_pc_sweep.json  gfx1151_native_int4_peak_4096.json  gfx1151_native_peak_4096.json  ragged_dot_int4.json  relu2_tuning.json  relu2_tuning_int4_sc256_deep_sweep.json  relu2_tuning_int4_sc256_scale_once_probe.json  relu2_tuning_int8.json  swiglu_tuning.json  swiglu_tuning_int4_pc_sweep.json  swiglu_tuning_int4_sc256_deep_sweep.json  swiglu_tuning_int4_sc256_scale_once_probe.json  swiglu_tuning_int4_sc256_sweep.json  swiglu_tuning_int8_pc_sweep.json  swiglu_tuning_int8_sc256_sweep.json  swiglu_tuning_pc_sweep.json  swiglu_tuning_sc256_sweep.json
docs/: api.rst  benchmarks.rst  conf.py  development.rst  index.rst  installation.rst  kernels.rst  pytorch.rst
kernels/: README.md
kernels/amdgcn/: README.md  generation_summary.json  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_evenk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_evenk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_maskk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_maskk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_evenk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_evenk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_maskk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_maskk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk4_evenk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk4_evenk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk4_maskk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk4_maskk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk8_evenk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk8_evenk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk8_maskk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk8_maskk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk2_evenk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk2_evenk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk2_maskk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk2_maskk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk4_evenk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk4_evenk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk4_maskk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk4_maskk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk8_evenk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk8_evenk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk8_maskk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn256_bk32_gm4_w8_s2_weu2_sk8_maskk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn512_bk32_gm4_w16_s2_weu2_sk1_evenk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn512_bk32_gm4_w16_s2_weu2_sk1_evenk.s  gfx1151_int4xint4_nn_pc_none_bm16_bn512_bk32_gm4_w16_s2_weu2_sk1_maskk.json  gfx1151_int4xint4_nn_pc_none_bm16_bn512_bk32_gm4_w16_s2_weu2_sk1_maskk.s  gfx1151_int4xint4_nn_pc_none_bm32_bn128_bk32_gm4_w16_s2_weu2_sk1_evenk.json  gfx1151_int4xint4_nn_pc_none_bm32_bn128_bk32_gm4_w16_s2_weu2_sk1_evenk.s  gfx1151_int4xint4_nn_pc_none_bm32_bn128_bk32_gm4_w16_s2_weu2_sk1_maskk.json  gfx1151_int4xint4_nn_pc_none_bm32_bn128_bk32_gm4_w16_s2_weu2_sk1_maskk.s  gfx1151_int4xint4_nn_pc_none_bm32_bn128_bk32_gm4_w8_s2_weu2_sk2_evenk.json  gfx1151_int4xint4_nn_pc_none_bm32_bn128_bk32_gm4_w8_s2_weu2_sk2_evenk.s  (+5883 more)
kernels/triton/: README.md  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_evenk.llir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_evenk.py  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_evenk.ttgir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_evenk.ttir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_maskk.llir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_maskk.py  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_maskk.ttgir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w16_s2_weu2_sk1_maskk.ttir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_evenk.llir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_evenk.py  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_evenk.ttgir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_evenk.ttir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_maskk.llir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_maskk.py  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_maskk.ttgir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk2_maskk.ttir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk4_evenk.llir  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk4_evenk.py  gfx1151_int4xint4_nn_pc_none_bm16_bn128_bk32_gm4_w8_s2_weu2_sk4_evenk.ttgir  (+7757 more)
native/: CMakeLists.txt
native/src/: dispatch.cpp
scripts/: benchmark_generated.py  benchmark_ragged_dot.py  build_release.py  check_wheel_portability.py  dump_registry.py  generate_amdgcn.py  generate_matrix.py  generate_ragged_amdgcn.py  regenerate_amdgcn.py  tune_gemm.py  tune_relu2.py  tune_swiglu.py
tests/: test_api_shapes.py  test_artifacts.py  test_autotune.py  test_benchmarking.py  test_native.py  test_native_generated.py  test_packaging.py  test_public_api.py  test_quant.py  test_ragged_dot.py  test_regeneration_script.py  test_registry.py  test_template_config.py
(+49 files in other folders)
